# llm-d-rl-verl-integration

./: .gitignore  README.md  pyproject.toml
diagrams/: verl_generate_call_flow.drawio
docker/: Dockerfile.verl-vllm018-llm-d-integration
examples/: README.md  configmap.yaml  ray-cluster.yaml  setting-kuberay.md
examples/configs/: epp-config-pd.yaml
examples/deployments/: configmap.yaml
examples/training-configs/: run_qwen3_4b_fsdp-8-gpus-envoy_pd.sh  run_qwen3_4b_fsdp-8-gpus-epp.sh  run_qwen3_4b_fsdp-8-gpus-epp_pd.sh  run_qwen3_4b_fsdp-8-gpus-llmd_stack.sh  run_qwen3_4b_fsdp-8-gpus-llmd_stack_pd.sh
llm_d_rl_verl_integration/: base_agent_loop_manager.py  endpoints.py  llmd_actor.py  pd_replica.py  register_pd.py
llm_d_rl_verl_integration/config/: envoy.yaml
llm_d_rl_verl_integration/envoy/: agent_loop_manager.py  llm_client.py  ray_actor.py  start-llmd-stack.sh  teardown-llmd-stack.sh
llm_d_rl_verl_integration/epp_router/: agent_loop_manager.py  config-approximate.yaml  config-pd.yaml  epp_actor.py  epp_launcher.py  grpc_client.py  llm_client.py  ray_actor.py  register_pd.py
llm_d_rl_verl_integration/llmd_stack/: agent_loop_manager.py  llm_client.py  llmd_stack_actor.py
llm_d_rl_verl_integration/shared/: base_agent_loop_manager.py  llmd_actor.py  pd_replica.py  register_pd.py
